--- a/src/containers/TopbarContainer/Topbar/TopbarMobileMenu/TopbarMobileMenu.module.css
+++ b/src/containers/TopbarContainer/Topbar/TopbarMobileMenu/TopbarMobileMenu.module.css
@@ -22,6 +22,7 @@
 
   @media (--viewportSmall) {
     display: block;
+    padding: 8rem;
   }
 }
 
